[tool.poetry]
name = "python-fastapi-postgres"
version = "0.1.0"
description = "Bolierplate for fastapi postgres"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
pydantic = "^1.9.2"
uvicorn = "^0.18.2"
FastAPI-SQLAlchemy = "^0.2.1"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
